[gd_scene load_steps=11 format=2]

[ext_resource path="res://MyTeam/MyTeamTerrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://MyTeam/ListPlayerMyTeam.tscn" type="PackedScene" id=2]
[ext_resource path="res://MyTeam/MyTeam.gd" type="Script" id=3]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Graduate-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://MyTeam/MyTeamSpecific.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109804, 0.254902, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.109804, 0.254902, 0.0196078, 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -18.0
rect_min_size = Vector2( 1240, 680 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1240.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3

[node name="GeneralBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 618.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_styles/pressed = SubResource( 1 )
toggle_mode = true
text = "GENERAL"

[node name="SpecificBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 622.0
margin_right = 1240.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_styles/pressed = SubResource( 2 )
toggle_mode = true
text = "SPECIFIC"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 1240.0
margin_bottom = 364.0
alignment = 1

[node name="MyTeamTerrain" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 0.0
margin_right = 1120.0
margin_bottom = 300.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 368.0
margin_right = 1240.0
margin_bottom = 618.0
size_flags_vertical = 3

[node name="MyTeamSpecific" parent="VBoxContainer/HBoxContainer3" instance=ExtResource( 6 )]
visible = false
margin_right = 0.0

[node name="MyteamPlayerList" parent="VBoxContainer/HBoxContainer3" instance=ExtResource( 2 )]

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 622.0
margin_right = 1240.0
margin_bottom = 682.0
rect_min_size = Vector2( 0, 60 )
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer4"]
margin_left = 320.0
margin_right = 920.0
margin_bottom = 60.0
rect_min_size = Vector2( 600, 0 )

[node name="BackBtn" type="Button" parent="VBoxContainer/HBoxContainer4/HBoxContainer"]
margin_right = 298.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.188235, 0, 1 )
text = "BACK"

[node name="SaveBtn" type="Button" parent="VBoxContainer/HBoxContainer4/HBoxContainer"]
margin_left = 302.0
margin_right = 600.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.266667, 1, 0, 1 )
text = "SAVE"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GeneralBtn" to="." method="_on_GeneralBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SpecificBtn" to="." method="_on_SpecificBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/HBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer4/HBoxContainer/SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
